[package]
name = "stm32-ioc"
version = "0.0.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/jellyterra-ci/stm32-ioc.rs"
description = "Parser for STM32CubeMX project configuration."

[dependencies]
flatlude = "1.1.1"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.quick-xml]
version = "0.39.0"
features = ["serialize"]
